--- a/backup_and_restore/application_backup_and_restore/installing/3scale.adoc
+++ b/backup_and_restore/application_backup_and_restore/installing/3scale.adoc
@@ -9,7 +9,7 @@ toc::[]
 
 Red Hat 3scale API Management (APIM) makes it easy to manage your APIs for internal or external users. Share, secure, distribute, control, and monetize your APIs on an infrastructure platform built with performance, customer control, and future growth in mind.
 
-3scale components can be deployed on-premise, in the cloud, as a managed service, or in any combination required.
+3scale components can be deployed on-premise, in the cloud, as a managed service, or in any combination required.
 
 This document describes how the {oadp-first} Operator can be used to back up and restore 3scale with on-cluster storage.
 
@@ -21,11 +21,25 @@ The flow of backup in this document is divided into 3 phases:
 . Backup and restore of the 3scale data
 . Backup and restore of the capabilities
 
+The backing up is done in multiple phases for the purpose of clean explanation of the entire flow but can potentially be done in a single phase using a more sophisticated version of Backup CR. 
 
-The backup is completed in multiple phases for the purpose of clean explanation of the entire flow but can potentially be done in a single phase using a more sophisticated version of Backup CR.
+However, the restoration must be done in a few phases due to how the 3scale-operator interacts with the APIM and general operators installation flow. 
 
-However, the restoration must be done in a few phases due to how the 3scale-Operator interacts with the APIM and general operator installation flow.
+There are a couple assumptions made in this document:
 
+* Source and destination cluster are of the same OCP/OSD version
+
+* 3scale installation will have all of its job queue drained prior to running the backup
+
+* 3scale installation is fully functional at the time of backup
+
+* There are two approaches for backing up the system database, recommended by OADP but service affecting approach and non service affecting approach that would need to be approved by the OADP team as I might not be aware of potential impact of using this approach.  
+
+* The operator is restored by re-creating the subscription and operator group. Meaning that if customers have changed any values of their operator via the CSV, the operator will not be properly recovered. However, the use case for updating CSV to edit values in the operator when it comes to 3scale should be none and customers should use subscription configuration instead.  
+
+* This scenario does not use custom domain, with custom domain the restoration might be easier mainly due to routes not having to be updated manually in the database. In case of default cluster domain being used, customers will have to update their domains in the database post database migration.  
+
+* Installation and configuration of OADP follows the setup for OADP with AWS as the s3 provider. The important bit is to enable Restic (when creating the DataProtectionApplication CR) since it is what we are going to use to perform the backup and restoration of the PVs. These steps need to be performed for **both** the source cluster and the destination cluster.
 
 include::modules/oadp-three-scale-operator-back-and-restore.adoc[leveloffset=+1]
 
