--- a/backup_and_restore/application_backup_and_restore/installing/3scale.adoc
+++ b/backup_and_restore/application_backup_and_restore/installing/3scale.adoc
@@ -3,7 +3,7 @@
 = Backing up and restoring 3scale using OADP
 include::_attributes/common-attributes.adoc[]
 include::_attributes/attributes-openshift-dedicated.adoc[]
-:context: 3scale-oadp
+:context: three-scale-oadp
 
 toc::[]
 
@@ -22,9 +22,9 @@ The flow of backup in this document is divided into 3 phases:
 . Backup and restore of the 3scale data
 . Backup and restore of the capabilities
 
-The backup is done in multiple phases for the purpose of a clean explanation of the entire flow but can potentially be done in a single phase using a more sophisticated version of Backup CR. 
+The backup is done in multiple phases for the purpose of a clean explanation of the entire flow but can potentially be done in a single phase using a more sophisticated version of Backup CR.
 
-However, the restoration must be done in a few phases due to how the 3scale-operator interacts with the APIM and general operator's installation flow. 
+However, the restoration must be done in a few phases due to how the 3scale-operator interacts with the APIM and general operator's installation flow.
 
 There are a couple of assumptions made in this document:
 
@@ -38,26 +38,33 @@ There are a couple of assumptions made in this document:
 +
 [NOTE]
 ====
-This would need to be approved by the OADP team as I might not be aware of the potential impact of using this approach.  
+This would need to be approved by the OADP team because of the potential impact of using this approach.
+====
 
-* The operator is restored by re-creating the subscription and operator groups. Meaning that if customers have changed any values of their operator via the CSV, the operator will not be properly recovered. However, the use case for updating CSV to edit values in the operator when it comes to 3scale should be none, and customers should use subscription configuration instead.  
+* The operator is restored by re-creating the subscription and operator groups. Meaning that if customers have changed any values of their operator via the CSV, the operator will not be properly recovered. However, the use case for updating CSV to edit values in the operator when it comes to 3scale should be none, and customers should use subscription configuration instead.
 
-* This scenario does not use a custom domain; with a custom domain, with a custom domain the restoration might be easier, mainly due to routes not having to be updated manually in the database. If a default cluster domain is used, customers will have to update their domains in the database post-migration.  
+* This scenario does not use a custom domain; with a custom domain, with a custom domain the restoration might be easier, mainly due to routes not having to be updated manually in the database. If a default cluster domain is used, customers will have to update their domains in the database post-migration.
 
 * Installation and configuration of OADP follow the setup for OADP with AWS as the S3 provider. The important bit is to enable Restic (when creating the DataProtectionApplication CR), since it is what we are going to use to perform the backup and restoration of the PVs. These steps need to be performed for **both** the source cluster and the destination cluster.
-
-[NOTE]
-====
-We will have to discuss with QE how to enable Kopia for this.
-====
-
-
-include::modules/oadp-three-scale-operator-back-and-restore.adoc[leveloffset=+1]
 
 [NOTE]
 ====
 Enable Restic when creating the DataProtectionApplication (DPA) custom resource (CR) as this is what it used to perform the backup and restoration of the PVs. Enabling Restic must be completed on both the source cluster and the destination cluster.
 ====
 
-.Additional resources
+// We will have to discuss with QE how to enable Kopia for this.
 
+include::modules/oadp-three-scale-operator-back-and-restore.adoc[leveloffset=+1]
+
+[id="backing-up-secrets-and-apim_{context}"]
+== Backing up secrets and APIM
+
+After you have restored the operator on the destination cluster, and it is running, you need to backup and restore the operator resources, these include:
+
+* Secrets
+* APIManager
+
+This is to ensure that the operator recreates with the same credentials as the source cluster, but not with the same state of data, as this is will be covered by subsequent phases.
+
+include::modules/backing-up-api-manager-custom-resources.adoc[leveloffset=+2]
+include::modules/backing-up-secrets-custom-resources.adoc[leveloffset=+2]
