--- a/modules/oadp-three-scale-operator-back-and-restore.adoc
+++ b/modules/oadp-three-scale-operator-back-and-restore.adoc
@@ -19,15 +19,15 @@
 
 * This scenario does not use a custom domain; with a custom domain, with custom domain the restoration could be easier as the routes do not have to be updated manually in the database. If a default cluster domain is used, you have to update their domains in the database after the database is migrated.
 
-[id="3scale-operator-backup-restore_{context}"]
+[id="threescale-operator-backup-restore_{context}"]
 == Operator backup and restore
 
-To back up the operator, we must take a couple of steps. The reason is that before the APIM is applied, the Operator must be scaled down and the secrets restored. Because the APIManager CR wildcard domain and some Secrets domains must be updated before the Operator reconciles them.
+To back up the operator, you must take a couple of steps. The reason is that before the APIM is applied, the Operator must be scaled down and the secrets restored. Because the APIManager CR wildcard domain and some Secrets domains must be updated before the Operator reconciles them.
 
-[id="3scale-operator-backup-and-restore_{context}]
+[id="threescale-operator-backup_{context}"]
 === Backing up the Operator
 
-To back up the operator, we need to do the backup and restore in a couple of steps. The reason for it is that the Operator must be scaled down before the APIM is applied and secrets are restored. This is because the APIManager CR wildcard domain and some Secrets’ domains must be updated to the new cluster domain before the Operator reconciles them.
+To back up the operator, you need to do the backup and restore in a couple of steps. The reason for it is that the Operator must be scaled down before the APIM is applied and secrets are restored. This is because the APIManager CR wildcard domain and some Secrets’ domains must be updated to the new cluster domain before the Operator reconciles them.
 
 .Sample backup CR:
 
@@ -41,9 +41,9 @@ metadata:
 spec:
   csiSnapshotTimeout: 10m0s
   defaultVolumesToFsBackup: false
-  includedNamespaces: #<1>
+  includedNamespaces: # <1>
     - threescale
-  includedResources: #<2>
+  includedResources: # <2>
     - operatorgroups
     - subscriptions
     - namespaces
@@ -54,9 +54,10 @@ spec:
 ----
 
 <1> `includedNamespaces`: the namespace where the 3scale operator is installed
-<2> `includedResources`: the resources we are about to backup. In this example, we are only concerned with backing up and restoring 3scale operator installation itself
+<2> `includedResources`: the resources you are about to backup. In this example, you are only concerned with backing up and restoring 3scale operator installation itself
 
-== Restoring the operator
+[id="threescale-operator-restore_{context}"]
+=== Restoring the operator
 
 On destination cluster create the restore CR pointing to the backup
 name:
@@ -69,7 +70,7 @@ metadata:
   name: operator-installation-restore
   namespace: openshift-adp
 spec:
-  backupName: operator-install-backup
+  backupName: operator-install-backup # <1>
   excludedResources:
     - nodes
     - events
@@ -83,4 +84,4 @@ spec:
   itemOperationTimeout: 1h0m0s
 ----
 
-<1> `+backupName+`: the name of the backup we created on the source cluster.
+<1> `backupName`: the name of the backup you created on the source cluster.
