[SRVKS-1115] Performance and scalability of OpenShift Serverless Serving
Add test context for SRVKS-1115

Scalability and performance update for SRVKS-1115

Minimal requirements update for SRVKS-1115

Preparing Serverless install update for SRVKS-1115

Fix dot in Preparing to install for SRVKS-1115

High-workload syle update for SRVKS-1115

Topic map changes for SRVKS-1115

Style fix in Preparing install for SRVKS-1115

QE feedback for SRVKS-1115

Correct idle consumption table for Kourier

Replicas of HPAs for SRVKS-1115

First PR fixes for SRVKS-1115

Second PR fixes for SRVKS-1115

Third PR fixes for SRVKS-1115

Fourth PR fixes for SRVKS-1115

Peer review #2 for SRVKS-1115

Duplicate callouts, attributes for SRVKS-1115

Attributes, line break fix for SRVKS-1115

Newline fix for SRVKS-1115

--- a/install/preparing-serverless-install.adoc
+++ b/install/preparing-serverless-install.adoc
@@ -25,12 +25,17 @@ The set of supported features, configurations, and integrations for {ServerlessP
 [id="about-serverless-scalability-performance"]
 == Scalability and performance on {ocp-product-title}
 
-{ServerlessProductName} has been tested with a configuration of 3 main nodes and 3 worker nodes, each of which has 64 CPUs, 457 GB of memory, and 394 GB of storage each.
+With a configuration of 3 main nodes and 3 worker nodes, each of which has 64 CPUs, 457 GB of memory, and 394 GB of storage each, the following time values have been determined during testing for a simple Quarkus application: 
 
-The maximum number of Knative services that can be created using this configuration is 3,000. This corresponds to the link:https://docs.openshift.com/container-platform/latest/scalability_and_performance/planning-your-environment-according-to-object-maximums.html#cluster-maximums-major-releases_object-limits[{ocp-product-title} Kubernetes services limit of 10,000], since 1 Knative service creates 3 Kubernetes services.
+* The average scale-from-zero response time was approximately 3.4 seconds.
+* The maximum response time was 8 seconds.
+* The 99.9th percentile of response times was 4.5 seconds.
 
-The average scale from zero response time was approximately 3.4 seconds, with a maximum response time of 8 seconds, and a 99.9th percentile of 4.5 seconds for a simple Quarkus application. These times might vary depending on the application and the runtime of the application.
+These times might vary depending on the application and the runtime of the application.
 
+The maximum number of Knative services that can be created is 3,000. This corresponds to the link:https://docs.openshift.com/container-platform/latest/scalability_and_performance/planning-your-environment-according-to-object-maximums.html#cluster-maximums-major-releases_object-limits[{ocp-product-title} Kubernetes services limit of 10,000], since 1 Knative service creates 3 Kubernetes services.
+
+Learn more about scaling and performance of {ServerlessProductName} Serving in xref:../knative-serving/scalability-and-performance-serving.adoc#scalability-and-performance-serving[Scalability and performance of {ServerlessProductName} Serving].
 
 // OCP specific docs
 
