OCPBUGS-38352-16: Updated the Supported network plugin feature matrix table

--- a/modules/install-osp-deploy-dualstack.adoc
+++ b/modules/install-osp-deploy-dualstack.adoc
@@ -1,9 +1,16 @@
 // Module included in the following assemblies:
 //
 // * installing/installing_openstack/installing-openstack-installer-custom.adoc
+
 :_mod-docs-content-type: PROCEDURE
 [id="install-osp-deploy-dualstack_{context}"]
 = Deploying the dual-stack cluster
+
+For dual-stack networking in {product-title} clusters, you can configure IPv4 and IPv6 address endpoints for cluster nodes. 
+
+.Prerequisites
+
+* You enabled Dynamic Host Configuration Protocol (DHCP) on the subnets.
 
 .Procedure
 
@@ -11,24 +18,19 @@
 +
 [NOTE]
 ====
-The dualstack network MTU must accommodate both the minimum MTU for IPv6, which is 1280, and the OVN-Kubernetes encapsulation overhead, which is 100.
+The dual-stack network MTU must accommodate both the minimum MTU for IPv6, which is `1280`, and the OVN-Kubernetes encapsulation overhead, which is `100`.
 ====
 +
-[NOTE]
-====
-DHCP must be enabled on the subnets.
-====
 
 . Create the API and Ingress VIPs ports.
 
 . Add the IPv6 subnet to the router to enable router advertisements. If you are using a provider network, you can enable router advertisements by adding the network as an external gateway, which also enables external connectivity.
 
-
-. To configure IPv4 and IPv6 address endpoints for cluster nodes, edit the `install-config.yaml` file. The following is an example of an `install-config.yaml` file:
+. Choose one of the following `install-config.yaml` configurations:
 +
-.Example `install-config.yaml`
-
-[source, yaml]
+.. For an IPv4/IPv6 dual-stack cluster where you set IPv4 as the primary endpoint for your cluster nodes, edit the `install-config.yaml` file in a similar way to the following example:
++
+[source,yaml]
 ----
 apiVersion: v1
 baseDomain: mydomain.test
@@ -77,16 +79,14 @@ platform:
 <1> You must specify an IP address range for both the IPv4 and IPv6 address families.
 <2> Specify the virtual IP (VIP) address endpoints for the Ingress VIP services to provide an interface to the cluster.
 <3> Specify the virtual IP (VIP) address endpoints for the API VIP services to provide an interface to the cluster.
-<4> Specify the dual-stack network details that are used by all of the nodes across the cluster.
-<5> The CIDR of any subnet specified in this field must match the CIDRs listed on `networks.machineNetwork`.
+<4> Specify the dual-stack network details that all of the nodes across the cluster use for their networking needs.
+<5> The Classless Inter-Domain Routing (CIDR) of any subnet specified in this field must match the CIDRs listed on `networks.machineNetwork`.
 <6> You can specify a value for either `name` or `id`, or both.
 <7> Specifying the `network` under the `ControlPlanePort` field is optional.
 +
-Alternatively, if you want an IPv6 primary dual-stack cluster, edit the `install-config.yaml` file following the example below:
+.. For an IPv6/IPv4 dual-stack cluster where you set IPv6 as the primary endpoint for your cluster nodes, edit the `install-config.yaml` file in a similar way to the following example:
 +
-.Example `install-config.yaml`
-
-[source, yaml]
+[source,yaml]
 ----
 apiVersion: v1
 baseDomain: mydomain.test
@@ -135,17 +135,15 @@ platform:
 <1> You must specify an IP address range for both the IPv4 and IPv6 address families.
 <2> Specify the virtual IP (VIP) address endpoints for the Ingress VIP services to provide an interface to the cluster.
 <3> Specify the virtual IP (VIP) address endpoints for the API VIP services to provide an interface to the cluster.
-<4> Specify the dual-stack network details that are used by all the nodes across the cluster.
+<4> Specify the dual-stack network details that all the nodes across the cluster use for their networking needs.
 <5> The CIDR of any subnet specified in this field must match the CIDRs listed on `networks.machineNetwork`.
 <6> You can specify a value for either `name` or `id`, or both.
 <7> Specifying the `network` under the `ControlPlanePort` field is optional.
 
-[NOTE]
-====
-When using an installation host in an isolated dual-stack network, the IPv6 address may not be reassigned correctly upon reboot. 
-
-To resolve this problem on {op-system-base-full} 8, create a file called `/etc/NetworkManager/system-connections/required-rhel8-ipv6.conf` that contains the following configuration:
-
+. Optional: When you use an installation host in an isolated dual-stack network, the IPv6 address might not be reassigned correctly upon reboot. To resolve this problem on {op-system-base-full} 8, complete the following steps:
++
+.. Create a file called `/etc/NetworkManager/system-connections/required-rhel8-ipv6.conf` that includes the following configuration:
++
 [source,text]
 ----
 [connection]
@@ -154,14 +152,17 @@ type=ethernet
 addr-gen-mode=eui64
 method=auto
 ----
++
+.. Reboot the installation host.
 
-To resolve this problem on {op-system-base} 9, create a file called `/etc/NetworkManager/conf.d/required-rhel9-ipv6.conf` that contains the following configuration:
-
+. Optional: When you use an installation host in an isolated dual-stack network, the IPv6 address might not be reassigned correctly upon reboot. To resolve this problem on {op-system-base-full} 9, complete the following steps:
++
+.. Create a file called `/etc/NetworkManager/conf.d/required-rhel9-ipv6.conf` that includes the following configuration:
++
 [source,text]
 ----
 [connection]
 ipv6.addr-gen-mode=0
 ----
-
-After you create and edit the file, reboot the installation host.
-====
++
+.. Reboot the installation host.
